// Copyright 2021 Linka Cloud  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package linka.cloud.protodb.internal.replication.raft;

option go_package = "go.linka.cloud/protodb/internal/replication/raft/pb;pb";

import "patch/go.proto";
option (go.lint).all = true;

message Op {
  oneof action {
    New new = 1;
    Set set = 2;
    Delete delete = 3;
    Commit commit = 4;
    Discard discard = 5;
  }
}

message New {
  uint64 at = 1;
}

message Set {
  bytes key = 1;
  bytes value = 2;
  uint64 expires_at = 3;
}

message Delete {
  bytes key = 1;
}

message Commit {}

message Discard {}

message Batch {
  string tx_id = 1;
  repeated Op ops = 2;
}

message Entry {
  oneof cmd {
    Batch batch = 2;
  }
}
